--- a/bpa-website/style.css
+++ b/bpa-website/style.css
@@ -1,8 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+.col-12 carbon-header {
+  padding-right: 0;
+}
+
 #main-header{
     height: 100vh;
+    padding-right: 0;
 }
 #stats{
     display: none;
@@ -15,6 +20,7 @@
     color: white;
     text-align: center;
     height: 75vh;
+    padding-right: 0;
 }
 #canvas123 {
     width: 100px;
@@ -51,6 +57,7 @@ span {
 }
 .align-items-center{
   background-color: #2c373abe;
+  overflow: hidden;
 }
 .info{
   text-align: left;
