--- a/bpa-website/style.css
+++ b/bpa-website/style.css
@@ -139,7 +139,7 @@ h3{
     padding-right: 0;
   }
   #small-2{
-    text-align: right;
+    text-align: left;
     padding-left: 0;
     padding-right: 0;
   }
