--- a/bpa-website/style.css
+++ b/bpa-website/style.css
@@ -94,6 +94,7 @@ span {
     color: #f7f7f7;
     grid-area: 2/1;
     padding-top: 8vh;
+    padding-bottom: 4vh;
 }
 h3{
   font-family: Inter, sans-serif;
@@ -119,7 +120,7 @@ h3{
   margin-bottom: 5%;
 }
 .inform-svg-1{
-  padding: 50px;
+  padding: 30px;
 }
 @media (max-width: 800px){
   .info{
@@ -148,5 +149,6 @@ h3{
   }
   #title{
     padding-top: 0%;
+    font-size: 3em;
   }
 }
