--- a/bpa-website/style.css
+++ b/bpa-website/style.css
@@ -6,6 +6,10 @@
   font-variation-settings: "TIME" 1;
   transition: font-variation-settings 0.4s ease;
 }
+.icon {
+  font-variation-settings: "TIME" 1;
+  transition: font-variation-settings 0.4s ease;
+}
 .icon:hover {
   font-variation-settings: "TIME" 100;
 }
@@ -145,6 +149,20 @@ h3{
 }
 #title-row{
   margin-bottom: 2vh;
+}
+.nav-container{
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  border-radius: 20px;
+  margin-right: 200px;
+  padding: 20px;
+}
+#nav{
+  position: fixed;
+  z-index: 9999;
+  border-radius: 20px;
+  width: 97%;
 }
 @media (max-width: 800px){
   .info{
