Update Added New Nav Bar Styling

--- a/bpa-website/style.css
+++ b/bpa-website/style.css
@@ -1,7 +1,20 @@
 /*font-family: "Anicons Regular", sans-serif;*/
 /*font-family: "Anicons Color", sans-serif;*/
 
+.icon {
+  font-family: "Anicons Regular", sans-serif;
+  font-variation-settings: "TIME" 1;
+  transition: font-variation-settings 0.4s ease;
+}
+.icon:hover {
+  font-variation-settings: "TIME" 100;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body{
+  font-family: Inter, sans-serif !important;
+}
 
 .col-12 carbon-header {
   padding-right: 0;
